<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chess</string>
    <string name="start_chess">Play Chess</string>
    <string name="welcome">Welcome to Chess</string>
    <string name="rules_title">Chess Rules</string>
    <string name="end_button">Play Again!</string>
    <string name="simulate_winner">Resign</string>
    <string name="endText">Player 2 wins!</string>
    <string name="cancelText">Cancel</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="promotion_title">Select a Piece to Promote</string>
    <string name="invalid">Invalid Move!</string>
    <string name="already_moved">You have already moved, press Done!</string>
    <string name="please_move">You must make a move before pressing Done!</string>
    <string name="wrong_team">Wrong team!</string>
    <string name="turn_title">\'s Turn!</string>
    <string name="black">(Black)</string>
    <string name="white">(White)</string>
    <string name="winner">\u0020wins!</string>
    <string name="play">Play Now!</string>
    <string name="createAccount">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordConf">Confirm Password</string>
    <string name="newUser">New User?</string>
    <string name="newUserLand">New User?\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="matching">Finding Opponent…</string>
    <string name="newAcct">New Account</string>
    <string name="passwordsNotMatch">Passwords did not match. Try again!</string>
    <string name="acctCreated">Account Created</string>
    <string name="logFailed">Username or Password is incorrect</string>
    <string name="remember">Remember</string>
    <string name="accFailed">Failed to Create Account</string>
    <string name="oppFound">Opponent Found! Press \"Play Chess\"</string>
    <string name="notYourTurn">It is not your turn!</string>



    <string name="rules">Black is always first to move and players take turns alternately moving
        one piece at a time. Movement is required. If a player´s turn is to move, he is not in
        check but has no legal moves, this situation is called “Stalemate” and it ends the game
        in a draw.\n\n
        Each type of piece has its own method of movement. A piece may be moved to another position
        or may capture an opponent´s piece, replacing on its square (en passant being the only
        exception). With the exception of the knight, a piece may not move over or through any
        of the other pieces.\n\n
        When a king is threatened with capture (but can protect himself or escape), it´s called
        check.If a king is in check, then the player must make a move that eliminates the
        threat of capture and cannot leave the king in check.\n\n
        Checkmate happens when a king is placed in check and there is no legal move to escape.
        Checkmate ends the game and the side whose king was checkmated looses.\n\n
        \n
        Move Rules:\n
        King can move exactly one square horizontally, vertically, or diagonally. At most once in
        every game, each king is allowed to make a special move, known as castling.\n\n
        Queen can move any number of vacant squares diagonally, horizontally, or vertically.\n\n
        Rook can move any number of vacant squares vertically or horizontally. It also is
        moved while castling.\n\n
        Bishop can move any number of vacant squares in any diagonal direction.\n\n
        Knight can move one square along any rank or file and then at an angle.
        The knight´s movement can also be viewed as an “L” or “7″ laid out at any
        horizontal or vertical angle.\n\n
        Pawns can move forward one square, if that square is unoccupied. If it has not yet
        moved, the pawn has the option of moving two squares forward provided both squares in
        front of the pawn are unoccupied. A pawn cannot move backward. Pawns are the only pieces
        that capture differently from how they move. They can capture an enemy piece on either
        of the two spaces adjacent to the space in front of them (i.e., the two squares
        diagonally in front of them) but cannot move to these spaces if they are vacant. The
        pawn is also involved in the two special moves en passant and promotion.\n
    </string>
    <string name="doneButton">Done</string>
    <string name="resign">Resign</string>
    <string name="player_s_turn">Player 1\'s turn!</string>
    <string name="currColor">(Black)</string>
    <string name="bishop_image">This is a bishop.</string>
</resources>
