<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChessActivity">

    <view
        android:id="@+id/chessView"
        class="edu.msu.team17.chess.ChessView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:duplicateParentState="false"
        android:text="@string/doneButton"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/resignButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:duplicateParentState="true"
        android:onClick="onEndChess"
        android:text="@string/resign" />

    <TextView
        android:id="@+id/currentPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:text="@string/player_s_turn"
        android:textSize="20sp" />

</RelativeLayout>